--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@ margin: auto;
 			    <label>Student GPA:</label>
 	     	    <input type="number" name="gpa" id="gpa"  />
 			</div>	
+
+			<div>
+				<label></label>
 				<input  type="submit" value="Submit">
+			</div>
 			</form>
 		</div>
 </br>	
