--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- External CSS --> 	
 
 
-		<title>School Management System</title>
+		<title>School Managment System</title>
 		<style>
 * {
   box-sizing:border-box;
@@ -37,35 +37,38 @@ margin: auto;
 
 	<body>
 
-		<h1>School Management System </h1>
-		<div class = "main">
+<div class = "main">
+
 			<form onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
+			<h1>School Managment System </h1>
 		    <h2> Student GPA Form </h2>
 			<div>
 				<label>Student Name:</label>
 				<input type="text" name="name" id="name"  />
 			</div>
+
 			<label class="validation-error hide" id="nameValidationError">! This field is required.</label>
+
 			<div>
 				<label>Student ID:</label>
 				<input type="number" name="idNumber" id="idNumber"  />
 			</div>
+
 			<div>
 			    <label>Student GPA:</label>
 	     	    <input type="number" name="gpa" id="gpa"  />
-			</div>	
-<<<<<<< HEAD
+			</div>
 
-			<div>
-				<label></label>
-=======
-			<div class="form-action-buttons">
->>>>>>> 71cc623e7105f859a0f9d54772dfd03090dae2bc
+			<div  class="form-action-buttons">
 				<input  type="submit" value="Submit">
 			</div>
+
 			</form>
-		</div>
-</br>	
+
+</div>
+
+</br>
+
 <div class="main">
 	<table class="list" id="studentList">
 	<thead>
@@ -79,7 +82,7 @@ margin: auto;
     </thead>
 	<tbody>
     </tbody>
-				
+
     </table>
 	</td>
 	</tr>
