--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="icon" type="image/png" href="favicon.png">
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,7 +39,7 @@ margin: auto;
 <div class = "main">
 
 			<form onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
-			<h1>School Managment System </h1>
+			<h1>Students Management System</h1>
 		    <h2> Student GPA Form </h2>
 			<div>
 				<label>Student Name:</label>
