--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 				<div>
 					<label>Student ID:</label>
-					<input type="number" name="idNumber" id="idNumber"  />
+					<input type="number" name="idNumber" min="0" max="99999999" id="idNumber"  />
 				</div>
 
 				<div>
